--- a/WeddingAlbum.ApplicationServices/WeddingAlbum.ApplicationServices.csproj
+++ b/WeddingAlbum.ApplicationServices/WeddingAlbum.ApplicationServices.csproj
@@ -6,6 +6,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Ensure.That" Version="10.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
 	</ItemGroup>
 
