--- a/WeddingAlbum.Common/WeddingAlbum.Common.csproj
+++ b/WeddingAlbum.Common/WeddingAlbum.Common.csproj
@@ -5,6 +5,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
 		<PackageReference Include="NWebsec.AspNetCore.Middleware" Version="3.0.0" />
 	</ItemGroup>
 
