--- a/WeddingAlbum.Domain/WeddingAlbum.Domain.csproj
+++ b/WeddingAlbum.Domain/WeddingAlbum.Domain.csproj
@@ -6,6 +6,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Ensure.That" Version="10.1.0" />
+		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
 	</ItemGroup>
 
 	<ItemGroup>
