--- a/WeddingAlbum.PublishedLanguage/WeddingAlbum.PublishedLanguage.csproj
+++ b/WeddingAlbum.PublishedLanguage/WeddingAlbum.PublishedLanguage.csproj
@@ -5,6 +5,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<ProjectReference Include="..\WeddingAlbum.Common\WeddingAlbum.Common.csproj" />
 	</ItemGroup>
 
