--- a/WeddingAlbum.Api/WeddingAlbum.Api.csproj
+++ b/WeddingAlbum.Api/WeddingAlbum.Api.csproj
@@ -13,6 +13,7 @@
 		<PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.2" />
 		<PackageReference Include="serilog.extensions.logging" Version="3.1.0" />
 		<PackageReference Include="serilog.sinks.file" Version="5.0.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
 	</ItemGroup>
 
 	<ItemGroup>
