--- a/WeddingAlbum.Api/WeddingAlbum.Api.csproj
+++ b/WeddingAlbum.Api/WeddingAlbum.Api.csproj
@@ -14,6 +14,7 @@
 		<PackageReference Include="serilog.extensions.logging" Version="3.1.0" />
 		<PackageReference Include="serilog.sinks.file" Version="5.0.0" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+		<PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.4.0" />
 	</ItemGroup>
 
 	<ItemGroup>
