--- a/WeddingAlbum.ApplicationServices/WeddingAlbum.ApplicationServices.csproj
+++ b/WeddingAlbum.ApplicationServices/WeddingAlbum.ApplicationServices.csproj
@@ -5,6 +5,12 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Compile Remove="UseCases\UserInEvents\**" />
+	  <EmbeddedResource Remove="UseCases\UserInEvents\**" />
+	  <None Remove="UseCases\UserInEvents\**" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Ensure.That" Version="10.1.0" />
 		<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.11" />
 		<PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
@@ -14,10 +20,6 @@
 		<ProjectReference Include="..\WeddingAlbum.Common\WeddingAlbum.Common.csproj" />
 		<ProjectReference Include="..\WeddingAlbum.Domain\WeddingAlbum.Domain.csproj" />
 		<ProjectReference Include="..\WeddingAlbum.PublishedLanguage\WeddingAlbum.PublishedLanguage.csproj" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="UseCases\UserInEvents\" />
 	</ItemGroup>
 
 </Project>
